[tool.poetry]
name = "cassava"
version = "0.1.0"
description = "Cassava is a package for reading, plotting and quality-checking CSV files."
authors = ["Paul Breen <pbree@bas.ac.uk>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/paul-breen/beelzebub"
homepage = "https://github.com/paul-breen/beelzebub"
documentation = "https://raw.githubusercontent.com/paul-breen/beelzebub/main/README.md"


[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
